--- a/2021-1/apunte/main.tex
+++ b/2021-1/apunte/main.tex
@@ -104,7 +104,7 @@
 	
 	Las notas se limitan casi exclusivamente al contenido dictado en el curso y las partes señaladas con (*) y los apéndices son optativos. 
 	
-	El  primer capítulo introduce a los alumnos al formalismo de los números enteros como sistema axiomático. En la  mitad final de este capítulo ses estudia el concepto de definición recursiva y se demuestra y aplica el principio de inducción.  En el segundo capítulo se estudian los principios de conteo  y diversas técnicas relacionadas a los mismos. Diferentes aspectos de la aritmética elemental son estudiados en el tercer y cuarto capítulo. Como aplicación de lo  aprendido en  estos dos capítulos se explica el algoritmo RSA. Finalmente, los capítulos 5 y 6 estudian la teoría de grafos y árboles, temas clásicos de la matemática discreta. 
+	El  primer capítulo introduce a los alumnos al formalismo de los números enteros como sistema axiomático. En la  mitad final de este capítulo se estudia el concepto de definición recursiva y se demuestra y aplica el principio de inducción.  En el segundo capítulo se estudian los principios de conteo  y diversas técnicas relacionadas a los mismos. Diferentes aspectos de la aritmética elemental son estudiados en el tercer y cuarto capítulo. Como aplicación de lo  aprendido en  estos dos capítulos se explica el algoritmo RSA. Finalmente, los capítulos 5 y 6 estudian la teoría de grafos y árboles, temas clásicos de la matemática discreta. 
 	
 	
 	\pagenumbering{arabic}
@@ -114,6 +114,9 @@
 \cleardoublepage
 
 \input{contenido.tex}
+
+\input{soluciones.tex}
+
 
 \end{document}
 
