--- a/2021-1/practicos/Practico-numeros-complejos.tex
+++ b/2021-1/practicos/Practico-numeros-complejos.tex
@@ -1,64 +1,86 @@
-\documentclass[12pt,spanish,makeidx]{amsbook}
-\tolerance=10000
-\renewcommand{\baselinestretch}{1.3}
+% PDFLaTeX
+\documentclass[a4paper,12pt,twoside,spanish,reqno]{amsbook}
+%%%---------------------------------------------------
 
+%\renewcommand{\familydefault}{\sfdefault} % la font por default es sans serif
+%\usepackage[T1]{fontenc}
 
+% Para hacer el  indice en linea de comando hacer 
+% makeindex main
+%% En http://www.tug.org/pracjourn/2006-1/hartke/hartke.pdf hay ejemplos de packages de fonts libres, como los siguientes:
+%\usepackage{cmbright}
+%\usepackage{pxfonts}
+%\usepackage[varg]{txfonts}
+%\usepackage{ccfonts}
+%\usepackage[math]{iwona}
+\usepackage[math]{kurier}
 
+\usepackage{etex}
 \usepackage{t1enc}
-\usepackage[spanish]{babel}
 \usepackage{latexsym}
 \usepackage[utf8]{inputenc}
 \usepackage{verbatim}
 \usepackage{multicol}
 \usepackage{amsgen,amsmath,amstext,amsbsy,amsopn,amsfonts,amssymb}
+\usepackage{amsthm}
 \usepackage{calc}         % From LaTeX distribution
 \usepackage{graphicx}     % From LaTeX distribution
-\usepackage{ifthen}       % From LaTeX distribution
-\usepackage{subfigure}    % From CTAN/macros/latex/contrib/supported/subfigure
-\usepackage{pst-all}      % From PSTricks
-\usepackage{pst-poly}     % From pstricks/contrib/pst-poly
-\usepackage{multido}      % From PSTricks
+\usepackage{ifthen}
 \input{random.tex}        % From CTAN/macros/generic
+\usepackage{subfigure} 
+\usepackage{tikz}
+\usetikzlibrary{arrows}
+\usetikzlibrary{matrix}
+\usepackage{mathtools}
+\usepackage{stackrel}
+\usepackage{enumitem}
+\usepackage{tkz-graph}
+%\usepackage{makeidx}
+\usepackage{hyperref}
+\hypersetup{
+    colorlinks=true,
+    linkcolor=blue,
+    filecolor=magenta,      
+    urlcolor=cyan,
+}
+\usepackage{hypcap}
+\numberwithin{equation}{section}
+% http://www.texnia.com/archive/enumitem.pdf (para las labels de los enumerate)
+\renewcommand\labelitemi{$\circ$}
+\setlist[enumerate, 1]{label={(\arabic*)}}
+\setlist[enumerate, 2]{label=\emph{\alph*)}}
 
 
-%% \theoremstyle{plain} %% This is the default
-\oddsidemargin 0.0in \evensidemargin -1.0cm \topmargin 0in
-\headheight .3in \headsep .2in \footskip .2in
-\setlength{\textwidth}{16cm} %ancho para apunte
-\setlength{\textheight}{21cm} %largo para apunte
-%\leftmargin 2.5cm
-%\rightmargin 2.5cm
-\topmargin 0.5 cm
+%%% FORMATOS %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\tolerance=10000
+\renewcommand{\baselinestretch}{1.3}
+\usepackage[a4paper, top=3cm, left=3cm, right=2cm, bottom=2.5cm]{geometry}
+\usepackage{setspace}
+%\setlength{\parindent}{0,7cm}% tamaño de sangria.
+\setlength{\parskip}{0,4cm} % separación entre parrafos.
+\renewcommand{\baselinestretch}{0.90}% separacion del interlineado
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\end{comment}
+%%% FIN FORMATOS  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\newcommand{\nc}{\newcommand}
-\nc{\RR}{\mathbb{R}} \nc{\HH}{\mathbb{H}} \nc{\CC}{\mathbb{C}} \nc{\ZZ}{\mathbb{Z}}
-\nc{\FF}{\mathbb{F}} \nc{\NN}{\mathbb{N}} \nc{\QQ}{\mathbb{Q}} \nc{\PP}{\mathbb{P}}
-\nc{\C}{\mathbb{C}}
-\nc{\ben}{\begin{enumerate}} \nc{\een}{\end{enumerate}} \nc{\x}{\varphi}
-\nc{\vs}{\vspace{1cm}}
-
-\usepackage{fancyhdr}
-\pagestyle{fancy}
-\fancyhf{}
-\fancyhead[LE,RO]{FAMAF}
-\fancyhead[RE,LO]{Matemática Discreta I}
-\fancyfoot[LE,RO]{\leftmark}
-\fancyfoot[RE,LO]{\thepage}
-
-\renewcommand{\headrulewidth}{0.5pt}
-%\renewcommand{\footrulewidth}{0.5pt}
-
-
-
+\newcommand{\rta}{\noindent\textit{Rta: }} 
+\newcommand \Z{{\mathbb Z}}
+\newcommand \C{{\mathbb C}}
+\newcommand \N{{\mathbb N}}
+\newcommand \mcd{\operatorname{mcd}}
+\newcommand \mcm{\operatorname{mcm}}
 
 \begin{document}
-	
-	{\bf \begin{center} Práctico Números Complejos \\ Matemática Discreta I -- Año 2019/2 \\ FAMAF \end{center}}
-	
-	\smallskip
+    \baselineskip=0.55truecm %original
+    
+    
+    {\bf \begin{center} Práctico Números Complejos \\ Matemática Discreta I -- Año 2019/2 \\ FAMAF \end{center}}
+    
+    
 
 
 \begin{enumerate}
+\setlength\itemsep{1.1em}
 
 \item
 Simplificar las siguientes expresiones:
@@ -90,12 +112,12 @@ $$\begin{array}{ll}
 
 
 \item Sumar y multiplicar los siguientes pares de números complejos
-	\begin{enumerate}
-		\item $2+ 3i$ y $4$.
-		\item $2+ 3i$ y $4i$.
-		\item $1 + i$ y $ 1 -i$.
-		\item $3-2i$ y $1 +i$. 
-	\end{enumerate}
+    \begin{enumerate}
+        \item $2+ 3i$ y $4$.
+        \item $2+ 3i$ y $4i$.
+        \item $1 + i$ y $ 1 -i$.
+        \item $3-2i$ y $1 +i$. 
+    \end{enumerate}
 
 \vspace{.5cm}
 
