--- a/2021-1/practicos/Practico3.tex
+++ b/2021-1/practicos/Practico3.tex
@@ -1,6 +1,18 @@
 % PDFLaTeX
 \documentclass[a4paper,12pt,twoside,spanish,reqno]{amsbook}
+%%%---------------------------------------------------
 
+%\renewcommand{\familydefault}{\sfdefault} % la font por default es sans serif
+%\usepackage[T1]{fontenc}
+
+% Para hacer el  indice en linea de comando hacer 
+% makeindex main
+%% En http://www.tug.org/pracjourn/2006-1/hartke/hartke.pdf hay ejemplos de packages de fonts libres, como los siguientes:
+%\usepackage{cmbright}
+%\usepackage{pxfonts}
+%\usepackage[varg]{txfonts}
+%\usepackage{ccfonts}
+%\usepackage[math]{iwona}
 \usepackage[math]{kurier}
 
 \usepackage{etex}
@@ -26,10 +38,10 @@
 %\usepackage{makeidx}
 \usepackage{hyperref}
 \hypersetup{
-	colorlinks=true,
-	linkcolor=blue,
-	filecolor=magenta,      
-	urlcolor=cyan,
+    colorlinks=true,
+    linkcolor=blue,
+    filecolor=magenta,      
+    urlcolor=cyan,
 }
 \usepackage{hypcap}
 \numberwithin{equation}{section}
@@ -51,33 +63,33 @@
 %\end{comment}
 %%% FIN FORMATOS  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\newcommand{\rta}{\noindent\textit{Rta: }} 
+
 \begin{document}
-	\baselineskip=0.55truecm %original
+    \baselineskip=0.55truecm %original
+    
 
-  {\bf \begin{center}\large  Práctico 3 \\ Matemática Discreta I -- Año 2020/1 \\ FAMAF \end{center}}
+  {\bf \begin{center}\large  Práctico 3 \\ Matemática Discreta I -- Año 2021/1 \\ FAMAF \end{center}}
 
-\vskip .5cm
 
 
 \begin{enumerate}
+\setlength\itemsep{1.1em}
 
-
-\vskip .5cm
 
 \item Hallar el cociente y el resto de la división de:
 
 \begin{multicols}{3}
 \begin{enumerate}
   \item $135$ por $23$,
-	\item $-135$ por $23$,
-	\item $135$ por $-23$,
+    \item $-135$ por $23$,
+    \item $135$ por $-23$,
   \item $-135$ por $-23$,
-	\item $127$ por $99$,
-	\item $98$ por $73$.
+    \item $127$ por $99$,
+    \item $98$ por $73$.
 \end{enumerate}
 \end{multicols}
 
-\vskip .5cm
 
 \item 
 \begin{enumerate}
@@ -86,39 +98,34 @@
 \end{enumerate}
 
 
-\vskip .5cm
 \item Dado $m\in \mathbb N$ hallar los restos posibles de $m^2$ y $m^3$ en la división por $3,4,5,7,8, 11$.
 
-\vskip .5cm
 \item Expresar en base 10 los siguientes enteros:
 \begin{multicols}{3}
 \begin{enumerate}
-	\item $(1503)_6$ 
-	\item $(1111)_2$ 
-	\item $(1111)_{12}$
-	\item $(123)_4$ 
-	\item $(12121)_3$
-	\item $(1111)_5$
+    \item $(1503)_6$ 
+    \item $(1111)_2$ 
+    \item $(1111)_{12}$
+    \item $(123)_4$ 
+    \item $(12121)_3$
+    \item $(1111)_5$
 \end{enumerate}
 \end{multicols}
 
-\vskip .5cm
 
 \item Convertir
 \begin{multicols}{2}
 \begin{enumerate}
-	\item  $(133)_4$ a base 8,
-	\item  $(B38)_{16}$ a base 8,
-	\item  $(3506)_7$ a base 2,
-	\item  $(1541)_6$ a base 4.
+    \item  $(133)_4$ a base 8,
+    \item  $(B38)_{16}$ a base 8,
+    \item  $(3506)_7$ a base 2,
+    \item  $(1541)_6$ a base 4.
 \end{enumerate}
 \end{multicols}
 
-\vskip .5cm
 
 \item Calcular: a) $(2234)_5+(2310)_5$ \qquad \qquad b)$(10101101)_2+(10011)_2$.
 
-\vskip .5cm
 
 \item Sean $a$, $b$, $c \in {\mathbb Z}$. Demostrar las siguientes afirmaciones:
   \begin{enumerate}
@@ -132,7 +139,6 @@
   \item Si $a \neq 0$\, y \,$a | b$, entonces \,$a| b\cdot c$.
   \end{enumerate}
 
-\vskip .5cm
 
 \item Dados $b,c$ enteros, probar las siguientes propiedades:
   \begin{enumerate}
@@ -144,15 +150,12 @@
   \item $b + c$ es par si y  sólo si $b$ y $c$ son ambos pares o ambos impares.
 \end{enumerate}
 
-\vskip .5cm
 
 \item Sea $n\in \mathbb Z$. Probar que $n$ es par si y sólo si $n^2$ es par.
 
-\vskip .5cm
 
 \item Probar que $n(n+1)$ es par para todo $n$ entero.
 
-\vskip .5cm
 
 \item Sean $a$, $b$, $c \in {\mathbb Z}$. ¿Cuáles de las siguientes afirmaciones son verdaderas? Justificar las respuestas.
   \begin{enumerate}
@@ -164,7 +167,6 @@
   \end{enumerate}
 
 
-\vskip .5cm
 
 \item Probar que cualquiera sea $n \in {\mathbb N}$:
   \begin{enumerate}
@@ -172,7 +174,6 @@
   \item $3^{2n+2} - 8n - 9$\, es divisible por 64.
   \end{enumerate}
 
-\vskip .5cm
 
 \item Decir si es verdadero o falso justificando:
   \begin{enumerate}
@@ -181,15 +182,12 @@
   \item $(n+1)\cdot (5n+2)$\, es múltiplo de 2, $\forall n \in {\mathbb N}$.
   \end{enumerate}
 
-\vskip .5cm
 
 \item Probar que para todo $n \in {\mathbb Z}$, $n^2 + 2$ no es divisible por 4.
 
 
-\vskip .5cm
 \item Probar que todo entero impar que no es múltiplo de 3, es de la forma $6m\pm 1$, con $m$ entero.
 
-\vskip .5cm
 
 \item 
 \begin{enumerate}
@@ -198,16 +196,13 @@
 \end{enumerate}
 
 
-\vskip .5cm
 \item Probar que si $a$ y $b$ son enteros entonces $a^2+b^2$ es divisible por 7 si y sólo si $a$ y $b$ son divisibles por 7.
 ¿Es lo mismo cierto para 3? ¿Para 5?
 
-\vskip .5cm
 
 
 \item Encontrar $(7469,2464)$, $(2689,4001)$, $(2447,-3997)$, $(-1109,-4999)$.
 
-\vskip .5cm
 
 \item
 Calcular el máximo común divisor y expresarlo como combinación lineal de los
@@ -215,22 +210,20 @@ números dados, para cada uno de  los siguientes pares de números:
 \begin{multicols}{3}
 \begin{enumerate}
   \item  14 y 35, 
-	\item 11 y 15, 
-	\item 12 y 52,
+    \item 11 y 15, 
+    \item 12 y 52,
   \item 12 y $-52$,  
-	\item 12 y 532,
-	\item 725 y 441,
-	\item 606 y 108.
+    \item 12 y 532,
+    \item 725 y 441,
+    \item 606 y 108.
 \end{enumerate}
 \end{multicols}
 
 
 
-\vskip .5cm
 
 \item Probar que no existen enteros $x$ e $y$ que satisfagan $x+y=100$ y $(x,y)=3$.
 
-\vskip .5cm
 
 \item %Si $(a,b)=1$. Probar:
 \begin{enumerate}
@@ -241,68 +234,58 @@ números dados, para cada uno de  los siguientes pares de números:
 
 
 
-\vskip .5cm
 
 \item Probar que si $n \in {\mathbb Z}$, entonces los números $2n+1$ y $\dfrac{n(n+1)}{2}$ son coprimos.
 
-\vskip .5cm
 
 
 
 \item Encontrar todos los enteros positivos $a$ y $b$ tales que $(a,b)=10$ y $[a,b]=100$.
 
 
-\vskip .5cm
 \item
 \begin{enumerate}
 \item Probar que si $d$ es divisor común de $a$ y $b$, entonces $\dfrac{(a,b)}{d} = \left(\dfrac{a}{d}, \dfrac{b}{d}\right)$.
 \item Probar que si $a,b\in \mathbb Z$ no nulos, entonces  $\displaystyle \frac a{(a,b)}$ y $\displaystyle \frac b{(a,b)}$ son coprimos.
 \end{enumerate}
 
-\vskip .5cm
 
 \item Probar que 3  y 5 son números primos.
 
-\vskip .5cm
 
 \item  Dar todos los números primos positivos menores que 100.
 
-\vskip .5cm
 
 \item Determinar con el criterio de la raíz  cuáles de los siguientes números son primos: 113, 123, 131, 151, 199, 503.
 
-\vskip .5cm
 
 \item Si $a\cdot b$ es un cuadrado y $a$ y $b$ son coprimos, probar que $a$ y $b$ son cuadrados.
 
-\vskip .5cm
 
 \item 
 \begin{enumerate}
-	\item Probar  que $\sqrt{5}$ no es un número racional.   
-	\item Probar  que $\sqrt{15}$ no es un número racional.  
-	\item Probar  que $\sqrt{8}$ no es un número racional.  
-	\item Probar  que $\sqrt[3]{4}$ no es un número racional.
+    \item Probar  que $\sqrt{5}$ no es un número racional.   
+    \item Probar  que $\sqrt{15}$ no es un número racional.  
+    \item Probar  que $\sqrt{8}$ no es un número racional.  
+    \item Probar  que $\sqrt[3]{4}$ no es un número racional.
 \end{enumerate}
 
 
-\vskip .5cm
 
 \item Probar que si $p_k$ es el $k$-ésimo primo positivo entonces
 $$p_{k+1}\leq p_1\cdot p_2\cdot \cdots \cdot p_k+1$$
 
-\vskip .5cm
 
 
 \item Calcular el máximo común divisor y el mínimo común múltiplo de los siguientes pares de números usando la descomposición en números primos. 
 \begin{multicols}{3}
-	\begin{enumerate}
-		\item $a=12$ y $b=15$. 
-		\item$a=11$ y $b=13$.
-		\item $a=140$ y $b=150$.
-		\item $a=3^2 \cdot 5^2$ y $b=2^2 \cdot 11$.
-		\item $a=2^2 \cdot 3\cdot 5$ y $b=2\cdot 5\cdot 7$.
-	\end{enumerate}
+    \begin{enumerate}
+        \item $a=12$ y $b=15$. 
+        \item$a=11$ y $b=13$.
+        \item $a=140$ y $b=150$.
+        \item $a=3^2 \cdot 5^2$ y $b=2^2 \cdot 11$.
+        \item $a=2^2 \cdot 3\cdot 5$ y $b=2\cdot 5\cdot 7$.
+    \end{enumerate}
 \end{multicols}
 
 
