--- a/2021-1/practicos/Practico4.tex
+++ b/2021-1/practicos/Practico4.tex
@@ -1,6 +1,18 @@
 % PDFLaTeX
 \documentclass[a4paper,12pt,twoside,spanish,reqno]{amsbook}
+%%%---------------------------------------------------
 
+%\renewcommand{\familydefault}{\sfdefault} % la font por default es sans serif
+%\usepackage[T1]{fontenc}
+
+% Para hacer el  indice en linea de comando hacer 
+% makeindex main
+%% En http://www.tug.org/pracjourn/2006-1/hartke/hartke.pdf hay ejemplos de packages de fonts libres, como los siguientes:
+%\usepackage{cmbright}
+%\usepackage{pxfonts}
+%\usepackage[varg]{txfonts}
+%\usepackage{ccfonts}
+%\usepackage[math]{iwona}
 \usepackage[math]{kurier}
 
 \usepackage{etex}
@@ -26,10 +38,10 @@
 %\usepackage{makeidx}
 \usepackage{hyperref}
 \hypersetup{
-	colorlinks=true,
-	linkcolor=blue,
-	filecolor=magenta,      
-	urlcolor=cyan,
+    colorlinks=true,
+    linkcolor=blue,
+    filecolor=magenta,      
+    urlcolor=cyan,
 }
 \usepackage{hypcap}
 \numberwithin{equation}{section}
@@ -51,34 +63,38 @@
 %\end{comment}
 %%% FIN FORMATOS  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\newcommand{\rta}{\noindent\textit{Rta: }} 
+\newcommand \Z{{\mathbb Z}}
+\newcommand \N{{\mathbb N}}
+\newcommand \mcd{\operatorname{mcd}}
+\newcommand \mcm{\operatorname{mcm}}
+
 \begin{document}
-	\baselineskip=0.55truecm %original
+    \baselineskip=0.55truecm %original
+    
 
 
-{\bf \begin{center}\large Práctico 4 \\ Matemática Discreta I -- Año 2020/1 \\ FAMAF \end{center}}
+{\bf \begin{center}\large Práctico 4 \\ Matemática Discreta I -- Año 2021/1 \\ FAMAF \end{center}}
 
-\vskip .5cm
 
 
 \begin{enumerate}
+\setlength\itemsep{1.1em}
+
 \item  
 \begin{enumerate}
-	\item Calcular el resto de la divisi\'on de 1599 por 39 sin tener que hacer la divisi\'on. \\(Ayuda: $1599=1600-1=40^2-1$).
-	\item Lo mismo con el resto de 914 al dividirlo por 31.
+    \item Calcular el resto de la divisi\'on de 1599 por 39 sin tener que hacer la divisi\'on. \\(Ayuda: $1599=1600-1=40^2-1$).
+    \item Lo mismo con el resto de 914 al dividirlo por 31.
 \end{enumerate}
 
 
-\vskip .5cm
 \item Sea $n\in\mathbb N$. Probar que todo n\'umero de la forma $4^n-1$ es divisible por 3.
 
-\vskip .5cm
 \item Probar que el resto de dividir $n^2$ por 4 es igual a 0 si $n$ es par y 1 si $n$ es impar.
 
-%\vskip .5cm
-
+%
 %\item Probar que si las longitudes de los lados de un tri\'angulo rect\'angulo son n\'umeros enteros, entonces los catetos no pueden ser ambos impares.
 
-\vskip .5cm
 \item
 \begin{enumerate}
 \item
@@ -89,16 +105,13 @@ $$ \qquad 12342  \, \qquad   \qquad  5176 \, \qquad \qquad  314573\,  \qquad  \q
 
 %\vskip .5cm \item Hallar los restos posibles en la divisi\'on de $n^2$ por 3.
 
-\vskip .5cm
 \item Sean $a$, $b$, $c$ n\'umeros enteros, ninguno divisible por 3. Probar que 
 $$a^2 + b^2 + c^2\equiv 0 \pmod 3.$$% es divisible por 3.
 
 
-\vskip .5cm
 \item Hallar la cifra de las unidades y la de las decenas del n\'umero $7^{15}$.
 
 
-\vskip .5cm
 \item Hallar el resto en la divisi\'on de $x$ por 5 y por 7 para:
  \begin{enumerate}
 \item $x=1^8 + 2^8 + 3^8 + 4^8 + 5^8 + 6^8 + 7^8 + 8^8$;
@@ -106,7 +119,6 @@ $$a^2 + b^2 + c^2\equiv 0 \pmod 3.$$% es divisible por 3.
 \end{enumerate}
 %\end{multicols}
 
-\vskip .5cm
 \item Hallar todos los $x$ que satisfacen:
 \begin{multicols}{3}
  \begin{enumerate}
@@ -121,13 +133,11 @@ $$a^2 + b^2 + c^2\equiv 0 \pmod 3.$$% es divisible por 3.
  \end{enumerate}
 \end{multicols}
 
-%\vskip .5cm
-\item Sean $a$, $b$, $m \in {\mathbb Z}$, $d>0$ tales que  \,$d\mid a$,\,  \,$d\mid b$\, y \,$d\mid m$. Probar que la ecuaci\'on $a\cdot x \equiv b\,( m)$ tiene
+%\item Sean $a$, $b$, $m \in {\mathbb Z}$, $d>0$ tales que  \,$d\mid a$,\,  \,$d\mid b$\, y \,$d\mid m$. Probar que la ecuaci\'on $a\cdot x \equiv b\,( m)$ tiene
 soluci\'on si y s\'olo si la ecuaci\'on
 \[ \frac{a}{d}\cdot x \equiv \frac{b}{d}\,\left(\frac{m}{d}\right)\]
 tiene soluci\'on.
 
-\vskip .5cm
 \item Resolver las siguientes ecuaciones:
 \begin{multicols}{3}
  \begin{enumerate}
@@ -137,20 +147,17 @@ tiene soluci\'on.
  \end{enumerate}
 \end{multicols}
 
-\vskip .5cm
 \item Resolver la ecuaci\'on $221 x \equiv 85\,\, (340)$. Hallar todas las soluciones $x$ tales que $0 \le x < 340$.
 
-\vskip .5cm
 \item 
 \begin{enumerate}
-	\item[(i)] Encontrar todas las soluciones de la ecuaci\'on en congruencia
-	$$36\,x\equiv 8 \quad (20)$$
-	usando el método visto en clase.
-	\item[(ii)] Dar todas las soluciones $x$ de la ecuaci\'on anterior tales que $-8 < x < 30$.
+    \item[(i)] Encontrar todas las soluciones de la ecuaci\'on en congruencia
+    $$36\,x\equiv 8 \quad (20)$$
+    usando el método visto en clase.
+    \item[(ii)] Dar todas las soluciones $x$ de la ecuaci\'on anterior tales que $-8 < x < 30$.
 \end{enumerate}
 
 
-\vskip .5cm
 \item 
 \begin{enumerate}
 \item[(i)] Encontrar todas las soluciones de la ecuaci\'on en congruencia
@@ -163,7 +170,6 @@ usando el método visto en clase.
 
 
 
-\vskip .5cm
 \item Dado $t \in {\mathbb Z}$, decimos que $t$ es {\it inversible m\'odulo $m$} si existe $h \in {\mathbb Z}$ tal que $th\equiv 1\,(\ m)$.
   \begin{enumerate}
   \item ¿Es 5 inversible m\'odulo 17?
@@ -179,14 +185,11 @@ usando el método visto en clase.
 %  \item Probar que $\mathbb Z_m$ es un anillo.
 % \end{enumerate}
 
-\vskip .5cm
 \item Encontrar los enteros cuyos cuadrados divididos por 19 dan resto 9.
 
-\vskip .5cm
 
 \item Probar que todo n\'umero impar $a$ satisface: $a^4 \equiv 1(16)$, $a^8 \equiv 1(32)$, $a^{16}\equiv 1(64)$.\\ ¿Se puede asegurar que $a^{2^n} \equiv 1 (2^{n+2})$?
 
-\vskip .5cm
 
 \item Encontrar el resto en la divisi\'on de $a$ por $b$ en los siguientes casos:
 \begin{multicols}{2}
@@ -198,51 +201,42 @@ usando el método visto en clase.
 \end{enumerate}
 \end{multicols}
 
-%\vskip .5cm
-\item Obtener el resto en la divisi\'on de $2^{21}$ por 13; de $3^8$ por 5 y de
+%\item Obtener el resto en la divisi\'on de $2^{21}$ por 13; de $3^8$ por 5 y de
  $8^{25}$ por 127.
 %$$ \text{ (a)  $2^{21}$\, por \,13;\qquad
  %$3^8$\, por \,5 $8^{25}$\, por \,127.}$$
 
 
-%\vskip .5cm
-
+%
 %\item Hallar todos los enteros que satisfacen simult\'aneamente:
 
 %$x \equiv 1\ ( 3); $ \qquad $x \equiv 1 \ ( 5)$; \qquad $x \equiv 1\ ( 7)$.
 
-%\vskip .5cm
-%\item Hallar el menor entero positivo que satisface simult\'aneamente las siguientes congruencias:
+%%\item Hallar el menor entero positivo que satisface simult\'aneamente las siguientes congruencias:
 
 %$x\equiv 2\ ( 3)$; \qquad $x \equiv 3\ ( 5)$; \qquad $x \equiv 5\ (2)$.
 
-%\vskip .5cm
-
+%
 %\item Hallar 4 enteros consecutivos divisibles por \,5, 7, 9 y 11 respectivamente.
 
-\vskip .5cm
 \item \begin{enumerate}
 \item Probar que no existen enteros no nulos tales que $x^2 + y^2 = 3z^2$.
 \item Probar que no existen n\'umeros racionales no nulos $a$, $b$, $r$ tales que $3(a^2 + b^2) = 7r^2$.
 \end{enumerate}
 
-\vskip .5cm
 
 %\item Cinco hombres recogieron en una isla un cierto n\'umero de cocos y resolvieron repartirlos al d\'\i a siguiente. Durante la noche uno de ellos decidi\'o separar su parte y para ello %dividi\'o el total en cinco partes y di\'o un coco que sobraba a un mono y se fue a dormir. Enseguida otro de los hombres hizo lo mismo, dividiendo lo que hab\'\i a quedado por cinco, dando %un coco que sobraba a un mono y retirando su parte, se fue a dormir. Uno tras otro los tres restantes hicieron lo mismo, d\'andole a un mono el coco que sobraba. A la ma\~nana siguiente %repartieron los cocos restantes, d\'andole a un mono el coco sobrante.
 %>Cu\'al es el n\'umero m\'\i nimo de cocos que se recogieron?
 
-%\vskip .5cm
-
+%
 %\item La producci\'on diaria de huevos en una granja es inferior a 75.
 %Cierto d\'\i a el recolector inform\'o que la cantidad de huevos recogida era tal que contando de a 3 sobraban 2, contando de a 5 sobraban 4 y
 %contando de a 7 sobraban 5. El capataz, dijo que eso era imposible. >Qui\'en ten\'\i a raz\'on? Justificar.
 
-%\vskip .5cm
-
+%
 \item Probar que si \,$(a,1001)=1$\, entonces \,$1001$\, divide a \,$a^{720}-1$.
 
 
-\vskip .5cm
 
 
 \
@@ -250,17 +244,14 @@ usando el método visto en clase.
 
 \noindent (*): ejercicios opcionales de mayor dificultad.
 
-\vskip .5cm
 
 \item (*) ¿Para qu\'e valores de \,$n$\, es \,$10^n-1$\, divisible por \,$11$?
 
 
-\vskip .5cm
 
 \item (*) Probar que para ning\'un $n\in\mathbb N$ se puede partir el conjunto $\{n,n+1,\ldots, n+5\}$ en dos partes
 disjuntas no vac\'\i as tales que los productos de los elementos que las integran sean iguales.
 
-\vskip .5cm
 
 \item (*) El n\'umero \,$2^{29}$\, tiene nueve cifras y todas distintas.
 ¿Cu\'al d\'\i gito falta? (No est\'a permitido el uso de calculadora).
