--- a/2021-1/practicos/Practico5.tex
+++ b/2021-1/practicos/Practico5.tex
@@ -1,6 +1,18 @@
 % PDFLaTeX
 \documentclass[a4paper,12pt,twoside,spanish,reqno]{amsbook}
+%%%---------------------------------------------------
 
+%\renewcommand{\familydefault}{\sfdefault} % la font por default es sans serif
+%\usepackage[T1]{fontenc}
+
+% Para hacer el  indice en linea de comando hacer 
+% makeindex main
+%% En http://www.tug.org/pracjourn/2006-1/hartke/hartke.pdf hay ejemplos de packages de fonts libres, como los siguientes:
+%\usepackage{cmbright}
+%\usepackage{pxfonts}
+%\usepackage[varg]{txfonts}
+%\usepackage{ccfonts}
+%\usepackage[math]{iwona}
 \usepackage[math]{kurier}
 
 \usepackage{etex}
@@ -26,10 +38,10 @@
 %\usepackage{makeidx}
 \usepackage{hyperref}
 \hypersetup{
-	colorlinks=true,
-	linkcolor=blue,
-	filecolor=magenta,      
-	urlcolor=cyan,
+    colorlinks=true,
+    linkcolor=blue,
+    filecolor=magenta,      
+    urlcolor=cyan,
 }
 \usepackage{hypcap}
 \numberwithin{equation}{section}
@@ -51,22 +63,28 @@
 %\end{comment}
 %%% FIN FORMATOS  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\newcommand{\rta}{\noindent\textit{Rta: }} 
+\newcommand \Z{{\mathbb Z}}
+\newcommand \N{{\mathbb N}}
+\newcommand \mcd{\operatorname{mcd}}
+\newcommand \mcm{\operatorname{mcm}}
+
 \begin{document}
-	\baselineskip=0.55truecm %original
+    \baselineskip=0.55truecm %original
+    
 
-{\bf \begin{center}\large  Práctico 5 \\ Matemática Discreta I -- Año 2020/1 \\ FAMAF \end{center}}
+{\bf \begin{center}\large  Práctico 5 \\ Matemática Discreta I -- Año 2021/1 \\ FAMAF \end{center}}
 
-\vskip .5cm
 
 
 
 
 \begin{enumerate}
+\setlength\itemsep{1.1em}
 
 \item  ¿Cuántas aristas tiene el  grafo completo $K_n$? ¿Para cuáles valores de $n$ se puede encontrar un dibujo de $K_n$ con la propiedad que las líneas representan las aristas sin cruzarse?
 
 
-\vskip .5cm
 \item Encuentre un isomorfismo entre los grafos por las siguientes listas. (Ambas listas especifican versiones de un famoso grafo conocida como {\it grafo de Petersen}.)
 $$
 \begin{matrix}
@@ -83,14 +101,12 @@ f&g&h&i&j&i&j&f&g&h
 \end{matrix}
 $$
 
-\vskip .5cm
 \item
 \begin{enumerate}
 \item Encuentre todos los grafos de 5 vértices y 2 aristas no isomorfos entre sí.
  \item ¿Cuál es el máximo número de aristas que puede tener un grafo de 5 vértices?
 \end{enumerate}
 
-\vskip .5cm
 
 \item Para cada una de las siguientes secuencias, encuentre un grafo que tenga exactamente las valencias indicadas o demuestre que tal grafo no existe:
 \begin{multicols}{3}
@@ -104,7 +120,6 @@ $$
 \end{enumerate}
 \end{multicols}
 
-\vskip .5cm
 
 \item Demuestre que los siguientes pares de grafos son isomorfos (encuentre un isomorfismo):
 
@@ -113,7 +128,7 @@ $$
 
 
 \begin{tabular}{ll}
-	${}^{}$ \qquad &
+    ${}^{}$ \qquad &
 \begin{tikzpicture}[scale=1]
 \draw (-1,2) node {(a)};
 \SetVertexSimple[Shape=circle, FillColor=white,MinSize=8 pt]
@@ -142,154 +157,148 @@ $$
 
 
 \begin{tabular}{ll}
-	${}^{}$ \qquad &
-	\begin{tikzpicture}[scale=1]
-	\draw (-1,1) node {(b)};
-	\SetVertexSimple[Shape=circle, FillColor=white,MinSize=8 pt]
-	%\SetVertexNoLabel
-	\Vertex[x=0,y=0]{A}
-	\Vertex[x=1.5,y=0.8]{B}
-	\Vertex[x=3,y=0]{C}
-	\Vertex[x=1.5,y=-0.8]{D}
-	\Vertex[x=0,y=-0.8]{E}
-	\Vertex[x=1.5,y=0]{F}
-	\Vertex[x=3,y=-0.8]{G}
-	\Vertex[x=1.5,y=-1.6]{H}
-	%
-	\Edges(A,B,C,D,A)
-	\Edges(E,F,G,H,E)
-	\Edges(A,E)
-	\Edges(B,F)
-	\Edges(C,G)
-	\Edges(D,H)
+    ${}^{}$ \qquad &
+    \begin{tikzpicture}[scale=1]
+    \draw (-1,1) node {(b)};
+    \SetVertexSimple[Shape=circle, FillColor=white,MinSize=8 pt]
+    %\SetVertexNoLabel
+    \Vertex[x=0,y=0]{A}
+    \Vertex[x=1.5,y=0.8]{B}
+    \Vertex[x=3,y=0]{C}
+    \Vertex[x=1.5,y=-0.8]{D}
+    \Vertex[x=0,y=-0.8]{E}
+    \Vertex[x=1.5,y=0]{F}
+    \Vertex[x=3,y=-0.8]{G}
+    \Vertex[x=1.5,y=-1.6]{H}
+    %
+    \Edges(A,B,C,D,A)
+    \Edges(E,F,G,H,E)
+    \Edges(A,E)
+    \Edges(B,F)
+    \Edges(C,G)
+    \Edges(D,H)
 
-	
-	\Vertex[x=4.5,y=0]{1}
-	\Vertex[x=5.5,y=0]{2}
-	\Vertex[x=6.5,y=0]{3}
-	\Vertex[x=7.5,y=0]{4}
-	\Vertex[x=4.5,y=-1]{5}
-	\Vertex[x=5.5,y=-1]{6}
-	\Vertex[x=6.5,y=-1]{7}
-	\Vertex[x=7.5,y=-1]{8}
-	\Edge[style={bend left}](1)(4)
-	\Edges(1,2,3,4,8,7,6,5,1)
-	\Edges(2,6,7,3)
-	\Edge[style={bend right}](5)(8)
-	\end{tikzpicture}
+    
+    \Vertex[x=4.5,y=0]{1}
+    \Vertex[x=5.5,y=0]{2}
+    \Vertex[x=6.5,y=0]{3}
+    \Vertex[x=7.5,y=0]{4}
+    \Vertex[x=4.5,y=-1]{5}
+    \Vertex[x=5.5,y=-1]{6}
+    \Vertex[x=6.5,y=-1]{7}
+    \Vertex[x=7.5,y=-1]{8}
+    \Edge[style={bend left}](1)(4)
+    \Edges(1,2,3,4,8,7,6,5,1)
+    \Edges(2,6,7,3)
+    \Edge[style={bend right}](5)(8)
+    \end{tikzpicture}
 \end{tabular}
 
 
 
 
-\vskip .5cm
 
 \item Sean $G=(V,E)$ y $G^{\prime}=(V^{\prime},E^{\prime})$ dos grafos y sea $\alpha :V \mapsto V^{\prime}$ una función tal que $\delta (v)=\delta (\alpha (v)) \;\;\forall\,\; v \in V$.
 \begin{enumerate}
-	\item ¿Puede afirmar que $\alpha $ es un isomorfismo?.
-	\item ¿Puede afirmarlo si $|V|=3$ ó 4?.
+    \item ¿Puede afirmar que $\alpha $ es un isomorfismo?.
+    \item ¿Puede afirmarlo si $|V|=3$ ó 4?.
 \end{enumerate}
 
-\vskip .5cm
 
 \item Encuentre una función del grafo $A$ al $B$ que preserve valencias. ¿Es un isomorfismo?.
 
 \vskip .2cm
 \begin{tabular}{llll}
-	$A:$ & &\qquad$B:$& \\
-	 &
-	\begin{tikzpicture}[scale=1]
-	\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
-	\Vertex[x=0,y=0]{A}
-	\Vertex[x=3,y=0]{B}
-	\Vertex[x=3,y=-3]{C}
-	\Vertex[x=0,y=-3]{D}
-	\Vertex[x=1,y=-1]{E}
-	\Vertex[x=2,y=-1]{F}
-	\Vertex[x=2,y=-2]{G}
-	\Vertex[x=1,y=-2]{H}
-	\Edges(A,B,C,D,A)
-	\Edges(E,F)
-	\Edges(G,H)
-	\Edges(A,E,G,C)
-	\Edges(B,F,H,D)
-	\end{tikzpicture}
-	&
-	& \begin{tikzpicture}[scale=1]
-	\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
-	\Vertex[x=0,y=0]{A}
-	\Vertex[x=3,y=0]{B}
-	\Vertex[x=3,y=-3]{C}
-	\Vertex[x=0,y=-3]{D}
-	\Vertex[x=1,y=-1]{E}
-	\Vertex[x=2,y=-1]{F}
-	\Vertex[x=2,y=-2]{G}
-	\Vertex[x=1,y=-2]{H}
-	\Edges(A,B,C,D,A)
-	\Edges(E,F,G,H,E)
-	\Edges(A,E)
-	\Edges(B,F)
-	\Edges(C,G)
-	\Edges(H,D)
-	\end{tikzpicture}
+    $A:$ & &\qquad$B:$& \\
+     &
+    \begin{tikzpicture}[scale=1]
+    \SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+    \Vertex[x=0,y=0]{A}
+    \Vertex[x=3,y=0]{B}
+    \Vertex[x=3,y=-3]{C}
+    \Vertex[x=0,y=-3]{D}
+    \Vertex[x=1,y=-1]{E}
+    \Vertex[x=2,y=-1]{F}
+    \Vertex[x=2,y=-2]{G}
+    \Vertex[x=1,y=-2]{H}
+    \Edges(A,B,C,D,A)
+    \Edges(E,F)
+    \Edges(G,H)
+    \Edges(A,E,G,C)
+    \Edges(B,F,H,D)
+    \end{tikzpicture}
+    &
+    & \begin{tikzpicture}[scale=1]
+    \SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+    \Vertex[x=0,y=0]{A}
+    \Vertex[x=3,y=0]{B}
+    \Vertex[x=3,y=-3]{C}
+    \Vertex[x=0,y=-3]{D}
+    \Vertex[x=1,y=-1]{E}
+    \Vertex[x=2,y=-1]{F}
+    \Vertex[x=2,y=-2]{G}
+    \Vertex[x=1,y=-2]{H}
+    \Edges(A,B,C,D,A)
+    \Edges(E,F,G,H,E)
+    \Edges(A,E)
+    \Edges(B,F)
+    \Edges(C,G)
+    \Edges(H,D)
+    \end{tikzpicture}
 \end{tabular}
 
-\vskip .5cm
 
 \item Pruebe que si $G$ es un grafo con más de un vértice, entonces existen dos vértices con la misma valencia.
 
-\vskip .5cm
 
 \item Si $G=(V,E)$ grafo,  el \textit{grafo complemento}  es $G' = (V,E')$, donde $E'$ son todos los 2-subconjuntos de $V$ que no están en $E$. Es decir, el grafo complemento tiene los mismos vértices que el grafo original y todas las aristas que le faltan a $G$ para ser grafo completo. 
 \begin{enumerate}
-	\item  Halle el complemento de los siguientes grafos:
-	\vskip .2cm
+    \item  Halle el complemento de los siguientes grafos:
+    \vskip .2cm
 
 
-	\begin{tikzpicture}[scale=1]
-	
-	\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
-	
-	\draw (-0.8,0) node {(a)};
-	\Vertex[x=0,y=0]{A}
-	\Vertex[x=0,y=-1]{B}
-	\Edges(A,B)
-	
-	
+    \begin{tikzpicture}[scale=1]
+    
+    \SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+    
+    \draw (-0.8,0) node {(a)};
+    \Vertex[x=0,y=0]{A}
+    \Vertex[x=0,y=-1]{B}
+    \Edges(A,B)
+    
+    
     \draw (1.2,0) node {(b)};
-	\Vertex[x=2,y=0]{A}
-	\Vertex[x=3,y=-0.5]{B}
-	\Vertex[x=2,y=-1]{C}
-	\Edges(A,B,C,A)
-	
-	\draw (4.2,0) node {(b)};
-	\Vertex[x=5,y=0]{A}
-	\Vertex[x=6.5,y=0]{B}
-	\Vertex[x=6.5,y=-1.5]{C}
-	\Vertex[x=5,y=-1.5]{D}
-	\Edges(A,B,C,D,A,C)
-	
-	\draw (7.2,0) node {(b)};
-	\Vertex[x=8,y=-1]{A}
-	\Vertex[x=9.5,y=0]{B}
-	\Vertex[x=11,y=0]{C}
-	\Vertex[x=12.5,y=-1]{D}
-	\Vertex[x=11,y=-2]{E}
-	\Vertex[x=9.5,y=-2]{F}
-	\Edges(A,B,C,D,E,F,A)
-	\Edges(B,C,E,F,B)
-	\Edges(A,C)
+    \Vertex[x=2,y=0]{A}
+    \Vertex[x=3,y=-0.5]{B}
+    \Vertex[x=2,y=-1]{C}
+    \Edges(A,B,C,A)
+    
+    \draw (4.2,0) node {(b)};
+    \Vertex[x=5,y=0]{A}
+    \Vertex[x=6.5,y=0]{B}
+    \Vertex[x=6.5,y=-1.5]{C}
+    \Vertex[x=5,y=-1.5]{D}
+    \Edges(A,B,C,D,A,C)
+    
+    \draw (7.2,0) node {(b)};
+    \Vertex[x=8,y=-1]{A}
+    \Vertex[x=9.5,y=0]{B}
+    \Vertex[x=11,y=0]{C}
+    \Vertex[x=12.5,y=-1]{D}
+    \Vertex[x=11,y=-2]{E}
+    \Vertex[x=9.5,y=-2]{F}
+    \Edges(A,B,C,D,E,F,A)
+    \Edges(B,C,E,F,B)
+    \Edges(A,C)
 
-	\end{tikzpicture}
+    \end{tikzpicture}
 
-	
+    
 
-\vskip .5cm
 
-	\item  Si $V=\{ v_1 \dots v_n \} $ y $\delta (v_i)=d_i \;\;\forall\,\; i=1,\dots , n\,$, calcule las valencias de el grafo complemento.
+    \item  Si $V=\{ v_1 \dots v_n \} $ y $\delta (v_i)=d_i \;\;\forall\,\; i=1,\dots , n\,$, calcule las valencias de el grafo complemento.
 \end{enumerate}
 
-\vskip .5cm
 
 
 
@@ -298,39 +307,38 @@ $$
 \vskip .2cm
 
 \begin{tabular}{llll}
-	&
-	\begin{tikzpicture}[scale=1]
-	\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
-	\Vertex[x=0.00, y=2.00]{a}
-	\Vertex[x=2., y=-1.50]{b}
-	\Vertex[x=-2., y=-1.50]{c}
-	\Edges(a,b,c,a)
-	\Vertex[x=0.00, y=0.85]{1}
-	\Vertex[x=1., y=-0.9]{2}
-	\Vertex[x=-1., y=-0.9]{3}
-	\Edges(1,2,3,1)
-	\Edges(a,1,3,c,b,2)
-	\end{tikzpicture}
-	&
-	\qquad
-	& 
-	\begin{tikzpicture}[scale=0.65]
-	\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
-	%
-	\Vertex[x=3.00, y=0.00]{1}
-	\Vertex[x=1.50, y=2.60]{2}
-	\Vertex[x=-1.50, y=2.60]{3}
-	\Vertex[x=-3.00, y=0.00]{4}
-	\Vertex[x=-1.50, y=-2.60]{5}
-	\Vertex[x=1.50, y=-2.60]{6}
-	\Edges(1,2,3,4,5,6,1)
-	\Edges(1,4) \Edges(3,6) \Edges(2,5)
-	\end{tikzpicture}
+    &
+    \begin{tikzpicture}[scale=1]
+    \SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+    \Vertex[x=0.00, y=2.00]{a}
+    \Vertex[x=2., y=-1.50]{b}
+    \Vertex[x=-2., y=-1.50]{c}
+    \Edges(a,b,c,a)
+    \Vertex[x=0.00, y=0.85]{1}
+    \Vertex[x=1., y=-0.9]{2}
+    \Vertex[x=-1., y=-0.9]{3}
+    \Edges(1,2,3,1)
+    \Edges(a,1,3,c,b,2)
+    \end{tikzpicture}
+    &
+    \qquad
+    & 
+    \begin{tikzpicture}[scale=0.65]
+    \SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+    %
+    \Vertex[x=3.00, y=0.00]{1}
+    \Vertex[x=1.50, y=2.60]{2}
+    \Vertex[x=-1.50, y=2.60]{3}
+    \Vertex[x=-3.00, y=0.00]{4}
+    \Vertex[x=-1.50, y=-2.60]{5}
+    \Vertex[x=1.50, y=-2.60]{6}
+    \Edges(1,2,3,4,5,6,1)
+    \Edges(1,4) \Edges(3,6) \Edges(2,5)
+    \end{tikzpicture}
 \end{tabular}
 
 
 
-\vskip .5cm
 
 
 \item Dados los siguientes grafos:
@@ -439,7 +447,6 @@ $$
 \item Halle las componentes conexas del grafo (7).
 \end{enumerate} 
 
-\vskip .5cm
 
 \item Dado el siguiente grafo
 $$
@@ -453,11 +460,9 @@ $$
 $$
 encuentre un ciclo hamiltoniano (si existe). Determine si existe una caminata euleriana y en caso de ser así encuentre una. 
 
-\vskip .5cm
 
 \item Un ratón intenta comer un $3\times 3\times 3$ cubo de queso. Él comienza en una esquina y come un subcubo de $1\times 1\times 1$, para luego pasar a un subcubo adyacente. ¿Podrá el ratón terminar de comer el queso en el centro?
 
-\vskip .5cm
 \item Dé todos los árboles de 5 vértices no isomorfos.
 
 
